upgrade Dockerfile